[package]
name = "github-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.26", features = ["serde"] }
dioxus = "0.3.2"
dioxus-hot-reload = "0.1.1"
dioxus-ssr = "0.3.0"
dotenv = "0.15.0"
http = "0.2.9"
octocrab = "0.25.1"
secrecy = "0.8.0"
serde = "1.0.166"
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
