[package]
name = "ghboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4.26", features = ["serde"] }
dioxus = "0.3.2"
dioxus-hot-reload = "0.1.1"
dioxus-ssr = "0.3.0"
dotenv = "0.15.0"
http = "0.2.9"
octocrab = "0.25.1"
secrecy = "0.8.0"
serde = "1.0.166"
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tower-http = { version = "0.5", features = ["fs"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
